# king_albert_ocaml

./: .gitignore  .ocamlformat  LICENSE.txt  README.md  dune-project  king_albert_ml.opam
lib/: AnsiColor.ml  Board.ml  Card.ml  CharMapMod.ml  Color.ml  Deck.ml  Game.ml  GameState.ml  Move.ml  Position.ml  Random.ml  Rank.ml  Suit.ml  dune
test/: dune
